--- a/Learning Journal/index.html
+++ b/Learning Journal/index.html
@@ -24,9 +24,14 @@
         </header>
         <main>
             <section class="featured">
-                <p class="date">JULY 23, 2022</p>
-                <h2>My new journey as a bootcamp student.</h2>
-                <p class="content">After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
+                <div class="background-div">
+                    <img src="images/featured.png" alt="">
+                </div>
+                <div class="content-div">
+                    <p class="date">JULY 23, 2022</p>
+                    <h2>My new journey as a bootcamp student.</h2>
+                    <p class="content">After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
+                </div>
             </section>
             <section class="articles">
                 <div class="article article-1">
