--- a/Learning Journal/index.html
+++ b/Learning Journal/index.html
@@ -17,8 +17,8 @@
             </div>
             <nav>
                 <ul>
-                    <li>HOME</li>
-                    <li>ABOUT ME</li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="about.html">ABOUT ME</a></li>
                 </ul>
             </nav>
         </header>
