--- a/Learning Journal/about.html
+++ b/Learning Journal/about.html
@@ -23,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="about.html">ABOUT ME</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
                 <img src="images/avatar.png" alt="">
             </div>
             <div class="about">
-                <h2 style="color: #000000;">Hi there! My name is Roku and welcome to my learning journal.</h2>
+                <h2 >Hi there! My name is Roku and welcome to my learning journal.</h2>
                 <p>After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
             </div>
         </section>
