--- a/Learning Journal/index.html
+++ b/Learning Journal/index.html
@@ -25,7 +25,7 @@
         <main>
             <section class="featured">
                 <div class="background-div">
-                    <img src="images/featured.png" alt="">
+                    <a href="journey.html"><img src="images/featured.png" alt=""></a>
                 </div>
                 <div class="content-div">
                     <p class="date">JULY 23, 2022</p>
